make project images into links and add placeholders

--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
             <h2>Projects</h2>
 
             <div class="project-card" id="hero-card">
-                <img src="###" alt="replace me"/>
+                <a><img src="https://fakeimg.pl/600x400?font=bebas" alt="placeholder"/></a>
                 <header>Project1</header>
                 <p>Replace me w/ a short descrp. of project.</p>
             </div>
 
             <div class="project-card">
-                <img src="###" alt="replace me"/>
+                <a><img src="https://fakeimg.pl/300x200?font=bebas" alt="placeholder"/></a>
                 <header>Project2</header>
                 <p>Replace me w/ a short descrp. of project.</p>
             </div>
 
             <div class="project-card">
-                <img src="###" alt="replace me"/>
+                <a><img src="https://fakeimg.pl/300x200?font=bebas" alt="placeholder"/></a>
                 <header>Project3</header>
                 <p>Replace me w/ a short descrp. of project.</p>
             </div>
