edit title of website

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="###"/>
 
     <!-- sets title for page -->
-    <title>Karra's Website</title>
+    <title>Portfolio Website</title>
 </head>
 
 <body>
