add class of main-header to main header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="main-header">
         <h1>Karra's Website!</h1>
         <nav>
             <ul>
