edit link to style.css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- links to CSS stylesheets -->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css"/>
-    <link rel="stylesheet" type="text/css" href="###"/>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
 
     <!-- sets title for page -->
     <title>Portfolio Website</title>
