edit link and add class to .img-avatar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <header class="main-header">
+        <img class="img-avatar" src="https://fakeimg.pl/200x200?font=bebas" alt="avatar image placeholder"/>
         <h1>Karra's Website!</h1>
         <nav>
             <ul>
