--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <header class="main-header">
         <img class="img-avatar" src="https://fakeimg.pl/200x200?font=bebas" alt="avatar image placeholder"/>
-        <h1>Karra's Website!</h1>
+        <h1 class="intro-text">Hello, I'm Karra!</h1>
         <nav>
             <ul>
                 <li>
