--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img class="img-avatar" src="https://fakeimg.pl/200x200?font=bebas" alt="avatar image placeholder"/>
         <h1 class="intro-text">Hello, I'm Karra!</h1>
         <nav>
-            <ul>
+            <ul class="main-nav">
                 <li>
                     <a href="#about-me">About</a>
                 </li>
