--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <nav>
             <ul class="main-nav">
                 <li>
-                    <a href="#about-me">About</a>
+                    <a class="nav-link" href="#about-me">About</a>
                 </li>
                 <li>
-                    <a href="#projects">Projects</a>
+                    <a class="nav-link" href="#projects">Projects</a>
                 </li>
                 <li>
-                    <a href="#contact-me">Contact Me</a>
+                    <a class="nav-link" href="#contact-me">Contact Me</a>
                 </li>
             </ul>
         </nav>
