edit font link to add open sans font

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- links for font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 
     <!-- sets title for page -->
     <title>Portfolio Website</title>
