add class of footer-text

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </main>
 
     <footer>
-        <h4>This is my footer:3</h4>
+        <p class="footer-text">This is my footer:3</p>
     </footer>
 </body>
 
