--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main>
         <section id="about-me">
             <h2>About Me:3</h2>
-            <h3>Hi, my name is Karra!</h3>
+            <h3>I am developing different applications!</h3>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At imperdiet dui accumsan sit amet nulla facilisi. Consequat ac felis donec et odio pellentesque. Pellentesque elit eget gravida cum sociis natoque. Molestie a iaculis at erat pellentesque adipiscing. Velit ut tortor pretium viverra. Est ullamcorper eget nulla facilisi. Nisl tincidunt eget nullam non nisi est sit amet. Vel elit scelerisque mauris pellentesque. Bibendum ut tristique et egestas. At quis risus sed vulputate odio ut enim blandit. Arcu felis bibendum ut tristique. Cras fermentum odio eu feugiat. Sed id semper risus in hendrerit gravida rutrum quisque non.
             </p>
