add link to github

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <ul class="contact-me" id="contact-me-nav">
                 <li>sample@email.com</li>
                 <li>555.555.5555</li>
-                <li><a href="replace me with link to github acount">GitHub</a></li>
+                <li><a href="https://github.com/PurplePeopleEated">GitHub</a></li>
             </ul>
         </section>
     </main>
