edit first project title and description

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
             <div class="project-card" id="hero-card">
                 <a><img src="https://fakeimg.pl/600x400?font=bebas" alt="placeholder"/></a>
-                <header>Project1</header>
-                <p>Replace me w/ a short descrp. of project.</p>
+                <header>Horiseon Page</header>
+                <p>A website made while practicing HTML and CSS basics.</p>
             </div>
 
             <div class="project-card">
