--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <header class="main-header">
-        <img class="img-avatar" src="https://fakeimg.pl/200x200?font=bebas" alt="avatar image placeholder"/>
+        <img class="img-avatar" src="assets/images/avatar.jpg" alt="avatar image placeholder"/>
         <h1 class="intro-text">Hello, I'm Karra!</h1>
         <nav>
             <ul class="main-nav">
