--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h2>Projects</h2>
 
             <div class="project-card" id="hero-card">
-                <a href="https://purplepeopleeated.github.io/horiseon-website/"><img src="https://fakeimg.pl/600x400?font=bebas" alt="placeholder"/></a>
+                <a href="https://purplepeopleeated.github.io/horiseon-website/"><img src="./assets/images/horiseon.png" alt="screenshot of the mock website"/></a>
                 <header>Horiseon Page</header>
                 <p>A website made while practicing HTML and CSS basics.</p>
             </div>
